enreistrement des 3 premieres sections

--- a/index.html
+++ b/index.html
@@ -27,16 +27,152 @@
     <meta property="og:description" content="Description Here"/>
 
 
-    <title>Take</title>
+    <title>Integration Musicien</title>
 
     <link href='bower_components/font-awesome/css/font-awesome.css' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:700italic' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="style.css" media="screen">
 </head>
 <body>
-//Code here
+
+    <!--<div class="container-fluid">-->
+        <!--Header  -->
+        <section class="container-fluid l-header">
+            <div class="container">
+                 <div class="row header">
+                     <div class="col-md-12">
+                         <div class="col-md-2 header-logo">
+                             <img src="img/logo.png" alt="Logo du musicien">
+                             <h1>Guitar</h1>
+                         </div>
+                         <div class="col-md-2 col-md-offset-4 header-contact">
+                             <p><i class="fa fa-skype fa-1x icon-default"></i></p>
+                             <p>guitarlessons</p>
+                         </div>
+                         <div class="col-md-2 header-contact">
+                             <p><i class="fa fa-phone fa-1x icon-default"></i></p>
+                             <p>013 045 608 65</p>
+                         </div>
+                         <div class="col-md-2 header-icon">
+                             <p><i class="fa fa-facebook fa-1x icon"></i></p>
+                             <p><i class="fa fa-twitter fa-1x icon"></i></p>
+                             <p><i class="fa fa-google fa-1x icon"></i></p>
+                             <p><i class="fa fa-rss fa-1x icon"></i></p>
+                         </div>
+                     </div>
+                 </div>
+            </div>
+            <div class="container-fluid l-menu">
+                 <div class="container menu">
+                     <div class="row">
+                         <div class="col-md-12">
+                             <div class="col-md-2 menu-item menu-item-first"><a href="#">Home</a></div>
+                             <div class="col-md-2 menu-item menu-item-two"><a href="#">About us</a></div>
+                             <div class="col-md-2 menu-item"><a href="#">Lessons</a></div>
+                             <div class="col-md-2 menu-item"><a href="#">Portfolio</a></div>
+                             <div class="col-md-2 menu-item menu-item-five"><a href="#">Blog</a></div>
+                             <div class="col-md-2 menu-item menu-item-last"><a href="#">Contact</a></div>
+                         </div>
+                     </div>
+                 </div>
+            </div>
+        </section>
+
+        <!--Slide  -->
+        <section class="container-fluid l-slide">
+            <iframe src="" frameborder="0" height="865" width></iframe>
+            <div class="slide-button">
+                <p><i class="fa fa-angle-up"></i></p>
+                <p><img src="img/diamond-white.png" alt=""></p>
+                <p><img src="img/diamond-or.png" alt=""></p>
+                <p><img src="img/diamond-white.png" alt=""></p>
+                <p><i class="fa  fa-angle-down"></i></p>
+            </div>
+            <div class="container slide">
+                <div class="col-md-12">
+                    <div class="col-md-8 col-md-offset-4">
+                        <div class="slide-test">
+                            <p><strong>check our video</strong> <span>learning in 6 weeks</span></p>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-md-offset-10">
+                        <div class="slide-on">
+                            <img src="img/lecteur-play.png" width="58" height="58" alt="Vignette">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!--Services  -->
+        <section class=" container-fluid l-services">
+
+
+            <div class="container services">
+                <div class="col-md-2 col-md-offset-5 services-btn-bg">
+                    <img src="img/btn-background.png" alt="">
+                    <p><i class="fa fa-chevron-down"></i></p>
+                </div>
+                <div class="col-md-12">
+                    <h2>Services</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
+                </div>
+                <div class="col-md-12">
+                    <div class="col-md-2 col-md-offset-1">
+                        <div>
+                            <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
+                            <img src="img/microphon-icon.png" class="service-icon" alt="">
+                        </div>
+                        <p>Recording Services</p>
+                    </div>
+                    <div class="col-md-2 col-lg-offset-2">
+                        <div>
+                            <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
+                            <img src="img/microphon-icon.png" class="service-icon" alt="">
+                        </div>
+
+                        <p>Your get the certificate</p>
+                    </div>
+                    <div class="col-md-2 col-lg-offset-2">
+                        <div>
+                            <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
+                            <img src="img/microphon-icon.png" class="service-icon" alt="">
+                        </div>
+
+                        <p>All lessons are via skype</p>
+                    </div>
+                </div>
+
+            </div>
+
+        </section>
+
+        <!--lessons  -->
+        <section class="l-lessons"></section>
+
+        <!--project  -->
+        <section class="l-project"></section>
+
+        <!--Skype  -->
+        <section class="l-skype"></section>
+
+        <!--Latest News  -->
+        <section class="l-latestNews"></section>
+
+        <!--Testimonials  -->
+        <section class="l-testimonials"></section>
+
+        <!--MAp  -->
+        <section class="l-map"></section>
+
+        <!--Footer  -->
+        <section class="l-footer"></section>
+
+
+    <!--</div>-->
+
+
 
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/jquery/dist/jquery.js"></script>
