--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
             <div class="container services">
                 <div class="col-md-2 col-md-offset-5 services-btn-bg">
                     <img src="img/btn-background.png" alt="">
-                    <p><i class="fa fa-chevron-down"></i></p>
+                    <div class="services-chevron"><i class="fa fa-chevron-down"></i></div>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12 ">
                     <h2>Services</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
                 </div>
-                <div class="col-md-12">
+                <div class="col-md-12 services-box">
                     <div class="col-md-2 col-md-offset-1">
                         <div>
                             <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
@@ -129,7 +129,7 @@
                     <div class="col-md-2 col-lg-offset-2">
                         <div>
                             <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
-                            <img src="img/microphon-icon.png" class="service-icon" alt="">
+                            <img src="img/icon-paper.png" class="service-icon" alt="">
                         </div>
 
                         <p>Your get the certificate</p>
@@ -137,7 +137,7 @@
                     <div class="col-md-2 col-lg-offset-2">
                         <div>
                             <img src="img/services-icon-bg.png" class="service-icon-bg" alt="">
-                            <img src="img/microphon-icon.png" class="service-icon" alt="">
+                            <img src="img/icon-webcam.png" class="service-icon" alt="">
                         </div>
 
                         <p>All lessons are via skype</p>
@@ -149,7 +149,52 @@
         </section>
 
         <!--lessons  -->
-        <section class="l-lessons"></section>
+        <section class="container-fluid l-lessons">
+            <div class="container lessons">
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="col-md-5">
+                            <h3>Our lessons</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-4">
+                            <h3>Are easy</h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="col-md-1">
+                                <img src="img/icon-leaf.png" width="44" height="38" alt="">
+                            </div>
+                            <div class="col-md-11">kjhgfdjhgf</div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="col-md-1">
+                                <img src="img/icon-map.png" width="44" height="44" alt="">
+                            </div>
+                            <div class="col-md-11">kjhgfdjhgf</div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="col-md-1">
+                                <img src="img/icon-fly.png" width="44" height="44" alt="">
+                            </div>
+                            <div class="col-md-11">kjhgfdjhgf</div>
+                        </div>
+
+                        <div class="col-md-12">
+                            <div class="col-md-1">
+                                <img src="img/icon-son.png" width="32" height="44" alt="">
+                            </div>
+                            <div class="col-md-11">kjhgfdjhgf</div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!--project  -->
         <section class="l-project"></section>
