update section project

--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
                     <div class="services-chevron"><i class="fa fa-chevron-down"></i></div>
                 </div>
                 <div class="col-md-12 ">
-                    <h2>Services</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
+                    <div class="col-md-10 col-md-offset-1">
+                        <h2>Services</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
+                    </div>
                 </div>
                 <div class="col-md-12 services-box">
                     <div class="col-md-2 col-md-offset-1">
@@ -153,42 +155,47 @@
             <div class="container lessons">
                 <div class="col-md-12">
                     <div class="row">
-                        <div class="col-md-5">
-                            <h3>Our lessons</h3>
+                        <div class="col-md-6">
+                            <h3>Our lessons<span> Are easy</span></h3>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-4">
-                            <h3>Are easy</h3>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-1">
+
+                    <div class="row lessons-linetime">
+                        <div class="col-md-12 ">
+                            <div class="col-md-1 lessons-pipe">
                                 <img src="img/icon-leaf.png" width="44" height="38" alt="">
                             </div>
-                            <div class="col-md-11">kjhgfdjhgf</div>
+                            <div class="col-md-4 lessons-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur
+                                adipiscing elit.</p>
+                            </div>
                         </div>
 
                         <div class="col-md-12">
-                            <div class="col-md-1">
+                            <div class="col-md-1  lessons-pipe">
                                 <img src="img/icon-map.png" width="44" height="44" alt="">
                             </div>
-                            <div class="col-md-11">kjhgfdjhgf</div>
+                            <div class="col-md-4 lessons-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
                         </div>
 
                         <div class="col-md-12">
-                            <div class="col-md-1">
+                            <div class="col-md-1  lessons-pipe">
                                 <img src="img/icon-fly.png" width="44" height="44" alt="">
                             </div>
-                            <div class="col-md-11">kjhgfdjhgf</div>
+                            <div class="col-md-4 lessons-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
                         </div>
 
                         <div class="col-md-12">
                             <div class="col-md-1">
                                 <img src="img/icon-son.png" width="32" height="44" alt="">
                             </div>
-                            <div class="col-md-11">kjhgfdjhgf</div>
+                            <div class="col-md-4 lessons-text">
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            </div>
                         </div>
 
                     </div>
@@ -197,9 +204,124 @@
         </section>
 
         <!--project  -->
-        <section class="l-project"></section>
+        <section class="container-fluid l-projects-header">
+            <div class="container projects">
+                <div class="col-md-12">
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="projects-header">
+                            <h2>our projects</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section >
 
-        <!--Skype  -->
+        <section class="container-fluid l-projects-content">
+            <div class="container projects">
+                <div class="projects-content">
+                    <div class="col-md-12">
+                        <div class="col-md-8">
+                            <div class="project-slide">
+                                <img src="" width="100%" height="570" alt="" style="background-color: #9e9e9e">
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="project-right">
+                                <div class="row">
+                                    <div class="col-md-12 project-right-header">
+                                        <p class="projects-cat"><i class="fa fa-folder-open"></i><span>Shows</span></p>
+                                        <p class="projects-date"><i class="fa fa-calendar"></i><span>21-08-2015</span></p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <h4>Lorem ipsum dolor sit amet, consec
+                                            tetur adipiscing elit.</h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris.</p>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3 project-button-action">
+                                        <button class="btn-action">go to project</button>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-12 project-social">
+                                        <p>Share : <i class="fa fa-facebook"></i> <i class="fa fa-twitter"></i><i class="fa fa-google"></i></p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                    <div class="projects-playing">
+                        <div class="col-md-12">
+                            <div class="col-md-1 col-md-offset-2">
+                                <p class="projects-playing-btn-left"><i class="fa fa-angle-left fa-2x"></i></p>
+                            </div>
+                            <div class="col-md-2 projects-playing-button">
+                                <p><img src="img/icon-diamond.png" alt=""></p>
+                                <p><img src="img/diamond-or.png" alt=""></p>
+                                <p><img src="img/icon-diamond.png" alt=""></p>
+                            </div>
+                            <div class="col-md-1">
+                               <p class="projects-playing-btn-right"><i class="fa  fa-angle-right fa-2x"></i></p>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+        </section>
+
+        <section class="container-fluid l-projects-footer">
+            <div class="container projects">
+                <div class="col-md-12 project-footer">
+                    <div class="col-md-4 project-footer-left">
+                        <img src="" height="370"  alt="">
+                        <div class="project-footer-icon-folder">
+                            <p><i class="fa fa-folder-open"></i> music</p>
+                        </div>
+
+                    </div>
+                    <div class="col-md-3">
+                        <div class="col-md-12 project-footer-middle">
+                            <img src=""  height="170"  alt="">
+                            <div class="project-footer-icon-folder">
+                                <p><i class="fa fa-folder-open"></i> rock</p>
+                            </div>
+                        </div>
+                        <div class="col-md-12 project-footer-middle">
+                            <img src=""  height="170"  alt="">
+                            <div class="project-footer-icon-folder">
+                                <p><i class="fa fa-folder-open"></i> lessons</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class=" project-footer-right">
+                            <img src=""   height="370"  alt="">
+                            <div class="project-footer-icon-folder">
+                                <p><i class="fa fa-folder-open"></i> shows</p>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 project-pagination">
+                    <div class="col-md-2 col-md-offset-10">
+                        <button class="button-pagination"><i class="fa fa-chevron-left"></i></button>
+                    <!--</div>-->
+                    <!--<div class="col-md-1">-->
+                        <button><i class="fa fa-chevron-right"></i></button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+    <!--Skype  -->
         <section class="l-skype"></section>
 
         <!--Latest News  -->
