update section latestNews

--- a/index.html
+++ b/index.html
@@ -310,11 +310,11 @@
                     </div>
                 </div>
                 <div class="col-md-12 project-pagination">
-                    <div class="col-md-2 col-md-offset-10">
-                        <button class="button-pagination"><i class="fa fa-chevron-left"></i></button>
-                    <!--</div>-->
-                    <!--<div class="col-md-1">-->
-                        <button><i class="fa fa-chevron-right"></i></button>
+                    <div class="col-md-1 col-md-offset-10">
+                        <button class="button-pagination "><i class="fa fa-chevron-left"></i></button>
+                    </div>
+                    <div class="col-md-1">
+                        <button class="button-pagination active"><i class="fa fa-chevron-right"></i></button>
                     </div>
                 </div>
             </div>
@@ -322,10 +322,82 @@
 
 
     <!--Skype  -->
-        <section class="l-skype"></section>
+        <section class="container-fluid l-skype">
+            <div class="container">
+                <div class="col-md-12 skype">
+                    <div class="col-md-6 skype-content">
+                        <div class="col-md-2 ">
+                            <p><i class="fa fa-skype skype-icon"></i></p>
+                        </div>
+                        <div class="col-md-9 ">
+                            <p class="skype-text">call us on skype!<br> <span>and learn how to play guitar</span></p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="col-md-6"><button class="btn-action">more details</button></div>
+                        <div class="col-md-6"><button class="btn-action btn-active">choose your plan</button></div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!--Latest News  -->
-        <section class="l-latestNews"></section>
+        <section class="container-fluid l-latestNews">
+            <div class="latestNews-button">
+                <p><i class="fa fa-angle-up"></i></p>
+                <p><img src="img/icon-diamond.png" alt=""></p>
+                <p><img src="img/diamond-or.png" alt=""></p>
+                <p><img src="img/icon-diamond.png" alt=""></p>
+                <p><i class="fa  fa-angle-down"></i></p>
+            </div>
+
+            <div class="container latestNews">
+                <div class="col-md-12">
+                    <div class="col-md-10 col-md-offset-1">
+                        <div class="latestNews-header">
+                            <h2>latest news</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                        <div class="latestNews-content">
+                            <div class="col-md-6 latestNews-col-left">
+                                <div class="col-md-12 article1">
+                                    <img src="" height="185" alt="">
+                                    <div class="action-comment">
+                                        <div class="interaction comments">
+                                            <p><i class="fa fa-comments fa-2x"></i></p>
+                                            <p>19</p>
+                                        </div>
+                                        <div class="interaction calendar">
+                                            <p><i class="fa fa-calendar "></i></p>
+                                            <p>23/09</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 latestNews-article2">
+                                    <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit sit amet, consectetur adipiscing.</h5>
+                                    <div class="col-md-12">
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis elit et elit interdum semper vel nec diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis elit et elit interdum semper vel nec diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+                                        <div class="article2-footer">
+                                            <p class="lien"><i class="fa fa-folder-open"></i>  guitar lesson</p>
+                                            <p class="last"><i class="fa  fa-chevron-circle-right"></i></p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="col-md-12">ddddddddddddddddddd</div>
+                                <div class="col-md-12">aaaaaaaaaaaaaaaaa</div>
+                                <div class="col-md-12">aaaaaaaaaaaaaaaaaa</div>
+                            </div>
+
+                        </div>
+                </div>
+
+            </div>
+        </section>
 
         <!--Testimonials  -->
         <section class="l-testimonials"></section>
