--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
         <!--Latest News  -->
         <section class="container-fluid l-latestNews">
             <div class="latestNews-button">
-                <p><i class="fa fa-angle-up"></i></p>
+                <p><i class="fa fa-angle-up fa-2x"></i></p>
                 <p><img src="img/icon-diamond.png" alt=""></p>
                 <p><img src="img/diamond-or.png" alt=""></p>
                 <p><img src="img/icon-diamond.png" alt=""></p>
-                <p><i class="fa  fa-angle-down"></i></p>
+                <p><i class="fa  fa-angle-down fa-2x"></i></p>
             </div>
 
             <div class="container latestNews">
@@ -361,8 +361,8 @@
                     </div>
                 </div>
                 <div class="col-md-12">
-                        <div class="latestNews-content">
-                            <div class="col-md-6 latestNews-col-left">
+                    <div class="latestNews-content">
+                        <div class="col-md-6 latestNews-col-left">
                                 <div class="col-md-12 article1">
                                     <img src="" height="185" alt="">
                                     <div class="action-comment">
@@ -387,20 +387,106 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="col-md-12">ddddddddddddddddddd</div>
-                                <div class="col-md-12">aaaaaaaaaaaaaaaaa</div>
-                                <div class="col-md-12">aaaaaaaaaaaaaaaaaa</div>
-                            </div>
+                        <div class="col-md-6 latestNews-col-right">
+                                <div class="col-md-12 latestNews-box">
+                                    <img src="" height="124" width="170" alt="" class="latestNews-img">
+                                    <div class="latestNews-box-content">
+                                        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+                                        <p class=""><i class="fa fa-folder-open"></i>  guitar lesson</p>
 
+                                    </div>
+                                    <div class="action-comment1">
+                                        <div class="interaction1 comments1">
+                                            <p><i class="fa fa-comments fa-2x"></i></p>
+                                            <p>8</p>
+                                        </div>
+                                        <div class="interaction1 calendar1">
+                                            <p><i class="fa fa-calendar "></i></p>
+                                            <p>6/09</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 latestNews-box">
+                                    <img src="" height="124" width="170" alt="" class="latestNews-img">
+                                    <div class="latestNews-box-content">
+                                        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+                                        <p class=""><i class="fa fa-folder-open"></i>  guitar lesson</p>
+
+                                    </div>
+                                    <div class="action-comment1">
+                                        <div class="interaction1 comments1">
+                                            <p><i class="fa fa-comments fa-2x"></i></p>
+                                            <p>8</p>
+                                        </div>
+                                        <div class="interaction1 calendar1">
+                                            <p><i class="fa fa-calendar "></i></p>
+                                            <p>2/09</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <div class="col-md-12 latestNews-box latestNews-box-last">
+                                    <img src="" height="124" width="170" alt="" class="latestNews-img">
+                                    <div class="latestNews-box-content">
+                                        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h6>
+                                        <p class=""><i class="fa fa-folder-open"></i>  guitar lesson</p>
+
+                                    </div>
+                                    <div class="action-comment1">
+                                        <div class="interaction1 comments1">
+                                            <p><i class="fa fa-comments fa-2x"></i></p>
+                                            <p>8</p>
+                                        </div>
+                                        <div class="interaction1 calendar1">
+                                            <p><i class="fa fa-calendar "></i></p>
+                                            <p>6/08</p>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        <div class="col-md-12 latestNews-btn-action">
+                            <button>all articles</button>
                         </div>
+                    </div>
                 </div>
 
             </div>
         </section>
 
         <!--Testimonials  -->
-        <section class="l-testimonials"></section>
+        <section class="container-fluid l-testimonials">
+            <div class="container testimonials">
+                <div class="col-md-10 col-md-offset-1">
+                    <div class="testimonials-header">
+                        <h2>testimonials</h2>
+                    </div>
+                </div>
+                <div class="col-md-12 testimonials-content">
+
+                    <div class="col-md-1 testimonials-btn">
+                        <button><i class="fa fa-chevron-left"></i></button>
+                    </div>
+
+                    <div class="col-md-10">
+                        <div class="col-md-10 col-md-offset-1">
+                            <p class="testimonials-avatar"><img src="img/image-avatar.png" alt=""></p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit. Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi.</p>
+                            <p class="author">Andreea Koronikova</p>
+                            <p class="category">Music teacher</p>
+                        </div>
+                    </div>
+
+
+                        <div class="col-md-2 col-md-offset-5 testimonials-btn-bg">
+                            <img src="img/btn-map.png" alt="">
+                            <div class="testimonials-map"><i class="fa fa-map-marker fa-2x "></i></div>
+                        </div>
+
+
+                </div>
+            </div>
+        </section>
 
         <!--MAp  -->
         <section class="l-map"></section>
