--- a/index.html
+++ b/index.html
@@ -489,7 +489,26 @@
         </section>
 
         <!--MAp  -->
-        <section class="l-map"></section>
+        <section class="container-fluid l-map">
+            <div class="map">
+                <img src=""  height="655" width="100%">
+
+                <div class="map-modal">
+
+                    <div class="map-logo">
+                        <img src="img/logo.png" alt="">
+                    </div>
+                    <div class="map-content">
+                        <h6>address</h6>
+                        <address>Greenplatz Ben 29, Germany <br>
+                            60435 Frankfurt am Main</address>
+                    </div>
+                    <div class="map-close"><i class=" fa fa-close"></i></div>
+                </div>
+
+            </div>
+
+        </section>
 
         <!--Footer  -->
         <section class="l-footer"></section>
