ajout footer & copyright

--- a/index.html
+++ b/index.html
@@ -511,14 +511,67 @@
         </section>
 
         <!--Footer  -->
-        <section class="l-footer"></section>
+        <footer class="container-fluid l-footer">
+            <div class="container footer">
+                <div class="col-md-12 footer-box">
+                    <div class="col-md-3 footer-about">
+                        <img src="img/logo-about.png" alt="">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus, at bibendum neque faucibus quis. Sed vel facilisis elit.</p>
+                        <br>
+                        <p>Nullam fringilla pharetra diam non accumsan. Morbi eget aliquam mauris. Etiam vehicula efficitur mi</p>
+                    </div>
+
+                    <div class="col-md-3 col-md-offset-1 footer-contact">
+                        <h4>contact</h4>
+                        <ul>
+                            <li><i class="fa fa-envelope"></i> info@guitarlessons.com</li>
+                            <li><i class="fa fa-phone"></i> 0123 456 789 0112</li>
+                            <li><i class="fa fa-map-marker"></i> Greenplatz Ben 29, Germany 60435</li>
+                            <li><i class="fa fa-envelope"></i> (0012) 654 356 445</li>
+                        </ul>
+                    </div>
+
+                    <div class="col-md-4 col-md-offset-1 footer-news">
+                        <h4>latest news</h4>
+
+                        <div>
+                            <p class="footer-date">02.08.2015</p>
+                            <p class="footer-title">Etiam tempor odio tellus.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus.</p>
+                        </div>
+                        <br>
+                        <div>
+                            <p class="footer-date">02.08.2015</p>
+                            <p class="footer-title">Etiam tempor odio tellus.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in egestas lectus. Etiam tempor odio tellus.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+
+    <!--Copyright -->
+    <section class="container-fluid l-copyright">
+        <div class="container copyright">
+            <div class="col-md-4">
+                <p>&#169 Copyright 2015 Guitar. All rights reserved</p>
+            </div>
+            <div class="col-md-2 col-md-offset-6 copyright-reseau">
+                <p><i class="fa fa-facebook"></i></p>
+                <p><i class="fa fa-twitter"></i></p>
+                <p><i class="fa fa-google"></i></p>
+                <p><i class="fa fa-rss"></i></p>
+
+            </div>
+
+    </section>
 
 
-    <!--</div>-->
 
 
 
-<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+    <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/jquery/dist/jquery.js"></script>
 <script>
     var buoop = {c: 2};
